# CppExperiment

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  build.sh  run.sh  setup.sh  vcpkg.json
src/: main.cpp
src/server_backend/: local_tcp_server.cpp  local_tcp_server.h
src/templates/: clicked.html  fancypage.html
src/utils/: utils.cpp  utils.h
src/xdo_interface/: xdo_interface.cpp  xdo_interface.h
tests/server_backend/: local_tcp_server_test.cc
tests/utils/: utils_test.cc
